[package]
name = "refactored-couscous"
version = "0.1.0"
edition = "2021"
description = "Building an NPM using Rust + WebAssembly"
repository = "https://github.com/Ikeh-Akinyemi/refactored-couscous"
license = "LICENSE_APACHE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen="0.2"
js-sys = "0.3"
